一些base封装、util工具类                                                        --PRJ

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,8 @@
         <item name="android:clickable">true</item>
         <item name="android:layout_centerHorizontal">true</item>
     </style>
+
+    <style name="SwipeBackLayout">
+        <item name="edge_size">0dp</item>
+    </style>
 </resources>
