--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         app:centerText="哈哈"
         app:leftIcon="@drawable/ic_arrow_back_black_36dp"
         app:rightIcon="@drawable/ic_delete_forever_black_36dp"
+        app:centerTextSize="24"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -19,4 +20,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </com.example.vizax.with.customView.BaseToolBar>
+
 </RelativeLayout>
