--- a/app/src/main/res/layout/demo_activity.xml
+++ b/app/src/main/res/layout/demo_activity.xml
@@ -10,20 +10,21 @@
 
     <LinearLayout
         android:id="@+id/root"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/demo_username_textInputLayout"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:id="@+id/textInputUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip">
 
             <EditText
-                android:id="@+id/etUserName"
+                android:id="@+id/demo_username_edtTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="用户名"
@@ -33,9 +34,9 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/demo_password_textInputLayout"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:id="@+id/textInputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dip"
@@ -43,7 +44,7 @@
 
             <EditText
                 android:hint="密码"
-                android:inputType="textPassword"
+                android:id="@+id/demo_password_edtTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -55,8 +56,8 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/btnCommit"
                 android:text="提交"
+                android:id="@+id/demo_commit_btn"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
