--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.vizax.with.ui.MainActivity">
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.example.vizax.with.customView.BaseToolBar
         app:centerText="哈哈"
-        app:rightIcon="@drawable/ic_delete_forever_black_36dp"
         app:centerTextSize="24"
+        app:leftIcon="@drawable/ic_keyboard_arrow_left"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -19,5 +15,4 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </com.example.vizax.with.customView.BaseToolBar>
-
-</RelativeLayout>
+</LinearLayout>
