--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.codetail.widget.RevealLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
+    android:orientation="vertical"
     tools:context="com.example.vizax.with.ui.MainActivity">
 
-    <com.example.vizax.with.customView.BaseToolBar
-        app:centerText="哈哈"
-        app:leftIcon="@drawable/back_ic"
-        app:rightIcon="@drawable/delete_forever_ic"
-        app:centerTextSize="24"
-        android:background="@color/colorPrimary"
+    <ImageView
+        android:id="@+id/img"
+        android:background="@drawable/demo"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/baseToolBar"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </com.example.vizax.with.customView.BaseToolBar>
-
-</RelativeLayout>
+        android:layout_height="match_parent" />
+</io.codetail.widget.RevealLinearLayout>
