--- a/app/src/main/res/layout/add_item_dialog.xml
+++ b/app/src/main/res/layout/add_item_dialog.xml
@@ -24,6 +24,7 @@
                 android:text="任务标题："
                 android:textSize="15dp"/>
             <EditText
+                android:id="@+id/mission_title"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 />
@@ -42,6 +43,7 @@
                 android:text="任务详情："
                 android:textSize="15dp"/>
             <EditText
+                android:id="@+id/mission_content"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
