--- a/app/src/main/res/layout/insist_main.xml
+++ b/app/src/main/res/layout/insist_main.xml
@@ -54,6 +54,7 @@
                     android:text="早起21"
                     android:textSize="30sp"
                     android:gravity="center"
+                    android:textColor="@color/bg_mood_1"
                     />
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -63,6 +64,7 @@
                         android:id="@+id/set_date_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="#00ffffff"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true" />
                     <com.example.vizax.with.customView.ReboundScrollView
@@ -113,12 +115,12 @@
                     <Button
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/foot_text_id"
                         android:text="编辑"
                         android:textColor="@color/white"
                         android:gravity="center"
                         android:layout_gravity="center"
-                        android:id="@+id/button" />
+                        android:id="@+id/button"
+                        android:background="@color/btn_misson_1"/>
 
                 </LinearLayout>
 
