--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.EventDetailsActivity">
+    tools:context=".ui.invitationList.InvitationDetailsActivity">
 <include layout="@layout/item_invitation"/>
 
         <android.support.v7.widget.RecyclerView
