--- a/app/src/main/res/layout/activity_my_focus.xml
+++ b/app/src/main/res/layout/activity_my_focus.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/invitation_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.MyFocusActivity">
+    tools:context=".ui.invitationList.InvitationActivity">
     <include layout="@layout/custom_toolbar"/>
 <android.support.v7.widget.RecyclerView
     android:id="@+id/activity_my_focus_recyclerview"
