--- a/app/src/main/res/layout/insist_main.xml
+++ b/app/src/main/res/layout/insist_main.xml
@@ -54,7 +54,7 @@
                     android:text="早起21"
                     android:textSize="30sp"
                     android:gravity="center"
-                    android:textColor="@color/bg_mood_1"
+                    android:textColor="@color/insist_mood_bg1"
                     />
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -120,7 +120,7 @@
                         android:gravity="center"
                         android:layout_gravity="center"
                         android:id="@+id/button"
-                        android:background="@color/btn_misson_1"/>
+                        android:background="@color/insist_mission_btn1"/>
 
                 </LinearLayout>
 
