更正了一下color.xml

--- a/app/src/main/res/layout/activity_invitation.xml
+++ b/app/src/main/res/layout/activity_invitation.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/activity_bg"
     tools:context=".ui.invitationList.InvitationActivity">
     <include layout="@layout/custom_toolbar"/>
 <android.support.v7.widget.RecyclerView
