--- a/app/src/main/res/layout/activity_insist.xml
+++ b/app/src/main/res/layout/activity_insist.xml
@@ -28,8 +28,9 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/insist_top_panel_ll"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
@@ -56,41 +57,58 @@
                     android:gravity="center"
                     android:textColor="@color/insist_mood_bg1"
                     />
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/set_date_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#00ffffff"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true" />
-                    <com.example.vizax.with.customView.ReboundScrollView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true">
-                        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                            android:id="@+id/calendarView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-
-                            />
-                    </com.example.vizax.with.customView.ReboundScrollView>
-
-                </RelativeLayout>
 
 
             </LinearLayout>
+            <RelativeLayout
+                android:layout_below="@id/insist_top_panel_ll"
+                android:id="@+id/insist_center_panel_rl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/set_date_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#00ffffff"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" />
+                <com.example.vizax.with.customView.ReboundScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true">
+                    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                        android:id="@+id/calendarView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        />
+                </com.example.vizax.with.customView.ReboundScrollView>
+
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/center_panel_ll"
+                android:layout_below="@id/insist_center_panel_rl"
+                android:layout_marginBottom="10dp">
+                <TextView
+                    android:id="@+id/center_text_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="一天不早起，我好难受啊"
+                    android:textSize="13sp"
+                    android:gravity="center"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_below="@+id/center_panel_ll"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:id="@+id/foot_bg_ll"
                 android:orientation="vertical"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 >
                 <TextView
                     android:id="@+id/foot_text_id"
@@ -111,7 +129,6 @@
                     android:orientation="horizontal">
 
 
-
                     <Button
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
@@ -126,22 +143,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/center_panel_ll"
-                android:layout_above="@id/foot_bg_ll"
-                android:layout_marginBottom="10dp">
-                <TextView
-                    android:id="@+id/center_text_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:text="一天不早起，我好难受啊"
-                    android:textSize="13sp"
-                    android:gravity="center"
-                    />
-            </LinearLayout>
+
         </RelativeLayout>
 
     </io.codetail.widget.RevealFrameLayout>
