--- a/app/src/main/res/layout/add_item_dialog.xml
+++ b/app/src/main/res/layout/add_item_dialog.xml
@@ -12,6 +12,16 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/mission_add_focus_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="17dp"
+            android:text="新建任务："
+            android:textSize="20sp"
+            />
+
         <LinearLayout
             android:layout_marginLeft="25dp"
             android:layout_marginTop="0dp"
@@ -22,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="任务标题："
-                android:textSize="15dp"/>
+                android:textSize="15sp"/>
             <EditText
                 android:id="@+id/mission_title"
                 android:layout_width="200dp"
@@ -35,13 +45,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="4dp">
+            android:layout_marginTop="10dp">
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="任务详情："
-                android:textSize="15dp"/>
+                android:textSize="15sp"/>
             <EditText
                 android:id="@+id/mission_content"
                 android:layout_width="200dp"
