--- a/app/src/main/res/layout/activity_insist.xml
+++ b/app/src/main/res/layout/activity_insist.xml
@@ -87,48 +87,33 @@
                 </com.example.vizax.with.customView.ReboundScrollView>
 
             </RelativeLayout>
+
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/center_panel_ll"
-                android:layout_below="@id/insist_center_panel_rl"
-                android:layout_marginBottom="10dp">
-                <TextView
-                    android:id="@+id/center_text_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:text="一天不早起，我好难受啊"
-                    android:textSize="13sp"
-                    android:gravity="center"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_below="@+id/center_panel_ll"
+                android:layout_below="@+id/insist_center_panel_rl"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/foot_bg_ll"
                 android:orientation="vertical"
                 >
-                <TextView
-                    android:id="@+id/foot_text_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:text="每日备注：一天不早起，我浑身难受"
-                    android:inputType="text"
-                    android:textSize="13sp"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:orientation="horizontal">
-
-
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/foot_text_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:text="每日备注：一天不早起，我浑身难受"
+                        android:inputType="text"
+                        android:textSize="13sp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="30dp"
+                        />
                     <Button
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
@@ -142,7 +127,21 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/center_panel_ll"
+               android:layout_above="@+id/foot_bg_ll">
+                <TextView
+                    android:id="@+id/center_text_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="一天不早起，我好难受啊"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    />
+            </LinearLayout>
 
         </RelativeLayout>
 
