--- a/app/src/main/res/layout/activity_insist.xml
+++ b/app/src/main/res/layout/activity_insist.xml
@@ -122,7 +122,7 @@
                         android:gravity="center"
                         android:layout_gravity="center"
                         android:id="@+id/button"
-                        android:background="@color/insist_mission_btn1"/>
+                        android:background="@color/colorPrimary"/>
 
                 </LinearLayout>
 
