--- a/app/src/main/res/layout/fragment_insist.xml
+++ b/app/src/main/res/layout/fragment_insist.xml
@@ -12,28 +12,31 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="5">
+            >
             <LinearLayout
-                android:id="@+id/head_linear"
                 android:layout_width="match_parent"
-                android:layout_height="456dp"
-                android:orientation="horizontal"
-                >
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/head_linear"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="24"
+                    android:orientation="horizontal"
+                    >
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/foot_linear"
+                    android:layout_below="@+id/head_linear"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="6"
+                    android:orientation="horizontal"
+                    android:background="@color/insist_mood_bg1"
+                    >
+                </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/foot_linear"
-                android:layout_below="@+id/head_linear"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="@color/insist_mood_bg1"
-                >
-            </LinearLayout>
         </RelativeLayout>
 
 
