--- a/app/src/main/res/layout/activity_insist.xml
+++ b/app/src/main/res/layout/activity_insist.xml
@@ -67,7 +67,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="25"
+                android:layout_weight="20"
                 >
                 <RelativeLayout
                     android:id="@+id/insist_center_panel_rl"
@@ -96,53 +96,13 @@
 
                 </RelativeLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:id="@+id/foot_bg_ll"
-                    android:orientation="vertical"
-                    android:layout_below="@id/insist_center_panel_rl"
-                    >
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-                        <TextView
-                            android:id="@+id/foot_text_id"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/wheat"
-                            android:text="每日备注：一天不早起，我浑身难受"
-                            android:inputType="text"
-                            android:textSize="13sp"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="20dp"
-                            />
-                        <Button
-                            android:layout_width="200dp"
-                            android:layout_height="wrap_content"
-                            android:text="编辑"
-                            android:textColor="@color/white"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:id="@+id/button"
-                            android:background="@color/colorPrimary"/>
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:id="@+id/center_panel_ll"
-                    android:layout_above="@id/foot_bg_ll"
+                    android:layout_below="@id/insist_center_panel_rl"
                     >
                     <TextView
                         android:id="@+id/center_text_id"
@@ -155,7 +115,54 @@
                         />
                 </LinearLayout>
 
+
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:id="@+id/foot_bg_ll"
+                android:orientation="vertical"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:weightSum="5">
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/foot_text_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:textColor="@color/wheat"
+                        android:text="每日备注：一天不早起，我浑身难受"
+                        android:inputType="text"
+                        android:textSize="13sp"
+                        android:gravity="center"
+
+                        />
+
+                    <Button
+                        android:layout_marginTop="10dp"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="编辑"
+                        android:textColor="@color/white"
+                        android:id="@+id/button"
+                        android:background="@color/colorPrimary"/>
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
 
 
 
