--- a/app/src/main/res/layout/item_add_dialog.xml
+++ b/app/src/main/res/layout/item_add_dialog.xml
@@ -3,60 +3,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="500dp"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    >
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="none">
     <LinearLayout
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:orientation="vertical">
+        android:orientation="vertical"
+
+        >
 
         <TextView
             android:id="@+id/mission_add_focus_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="17dp"
-            android:text="新建任务："
+            android:text="新建任务"
             android:textSize="20sp"
             />
 
         <LinearLayout
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="0dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="任务标题："
-                android:textSize="15sp"/>
-            <EditText
-                android:id="@+id/mission_title"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                />
+                android:textSize="15sp">
+
+                <EditText
+                    android:hint="任务标题"
+                    android:id="@+id/mission_title"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    />
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="10dp">
-            <TextView
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="25dp">
+            <android.support.design.widget.TextInputLayout
 
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="任务详情："
-                android:textSize="15sp"/>
+                android:textSize="15sp">
             <EditText
+                android:hint="任务详情"
                 android:id="@+id/mission_content"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
         </LinearLayout>
+
     </LinearLayout>
+    </ScrollView>
             <!-- 定义HorizontalScrollView，为里面的组件添加水平滚动条 -->
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/insist_ic_bg_rcyVi"
