--- a/app/src/main/res/layout/activity_myconcern.xml
+++ b/app/src/main/res/layout/activity_myconcern.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.example.vizax.with.ui.myconcern.MyConcernFragment"
-        />
+        tools:layout="@layout/my_concern_fragment" />
 
 
 
