--- a/app/src/main/res/layout/activity_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_tab_fragment.xml
@@ -6,15 +6,13 @@
     android:orientation="vertical"
     >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="活动页面"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/activity_tab_fragment_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="#ffff0000"
+        android:dividerHeight="10dp"
+        android:text="Hello World!" />
 
 
 </LinearLayout>
