关注模块 95% 代码没有规范

--- a/app/src/main/res/layout/activity_myconcern.xml
+++ b/app/src/main/res/layout/activity_myconcern.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.codetail.widget.RevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.myconcern.MyConcernActivity">
+    <include layout="@layout/base_toolbar"/>
     <fragment
         android:id="@+id/my_concern_fragment"
         android:layout_width="match_parent"
@@ -14,4 +15,4 @@
 
 
 
-</LinearLayout>
+</io.codetail.widget.RevealLinearLayout>
