--- a/app/src/main/res/layout/home_sidebar.xml
+++ b/app/src/main/res/layout/home_sidebar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.vizax.with.ui.home.MyDrawerLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawerlayout_id"
     android:layout_width="match_parent"
@@ -38,4 +38,4 @@
         <include layout="@layout/home_sidebar_item"/>
     </LinearLayout>
 
-</com.example.vizax.with.ui.home.MyDrawerLayout>
+</android.support.v4.widget.DrawerLayout>
